Revision history for MIDI-Drummer

{{$NEXT}}

0.1605 2020-09-15 17:33:07
    - Improve documentation.
    - Simplify the ->metronome78 beat.

0.1604 2020-09-15 09:47:54
    - Fix the defaults for triplet 32nd, 64th, 128th durations.

0.1603 2020-09-15 09:01:25
    - Fix hi-hat patches in the eg/ programs.
    - Simplify the 5/8 metronome beat.

0.1602 2020-09-02 10:11:27
    - Improve documentation slightly again.

0.1601 2020-09-01 09:28:48
    - Fix Bézier variable names.
    - Add accessors for the acoustic and electric snare and bass.
    - Improve documentation slightly.

0.1600 2020-08-31 15:06:44
    - Add a Bézier curve option to the ->crescendo_roll.

0.1502 2020-08-31 07:59:16
    - Fix the ->crescendo_roll logic replacing start-span with min-max (or max-min).

0.1501 2020-08-30 13:26:09
    - Fix ->crescendo_roll documentation.

0.1500 2020-08-30 13:17:38
    - Add the ->crescendo_roll method.

0.1400 2020-08-23 12:21:18
    - Fix eg/reggae.
    - Add the ->flam method.

0.1300 2020-08-23 09:58:26
    - Improve documentation.
    - Improve ->roll and ->set_time_sig code.
    - Add 32nd, 64th and 128th Music::Duration specs.
    - Add the ->roll method.
    - Add the eg/crescendo program.
    - Improve eg/reggae.

0.1201 2020-08-22 15:26:43
    - Fix the eg/waltz beat figure.
    - Add a fill to the beginning of eg/reggae.
    - Simplify the ->accented_note method.

0.1200 2020-08-22 10:21:34
    - Add the eg/fool-in-the-rain example program.
    - Consolidate the metronomes into a single program.
    - Remove the unneeded effects: reverb, chorus and pan.
    - Add a 6/8 metronome beat.
    - Add all remaining named percussion patches.

0.1101 2020-08-17 09:34:01
    - Improve the halftime shuffle example program.
    - Add 7/4 and 7/8 metronomes.

0.1100 2020-08-14 17:19:40
    - Add the ->accent_note method.
    - Add an example program illustrating the James Brown, "Cold Sweat" groove.

0.1001 2020-08-11 07:02:59
    - Add eg/waltz. Why not?